# Connect-4

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: game.rs  main.rs  mediator.rs  render.rs
connect-4-core/: Cargo.toml
connect-4-core/src/: lib.rs  logger.rs
core/: Cargo.toml
core/src/: lib.rs
server/: Cargo.toml
server/src/: client.rs  main.rs  server.rs
