[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }
tokio = { version = "1.24.1", features = ["full"] }
anyhow = "1.0.68"
log = "0.4.17"
bevy_egui = "0.18.0"
