[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
connect-4-core = { path = "../connect-4-core" }
tokio = { version = "1.24.1", features = ["full"] }
anyhow = "1.0.68"
log = "0.4.17"
gtk = { version = "^0.5", package = "gtk4" }
relm4 = "0.5.0-rc.1"
relm4-components = "0.5.0-rc.1"
gdk = "0.16.2"
