[package]
name = "connect-4-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
drax = { git = "https://github.com/ScrapyardRs/Drax", branch = "develop" }
fern = "0.6.1"
log = "0.4.17"
